--- a/www/css/icons.css
+++ b/www/css/icons.css
@@ -407,191 +407,192 @@
   font-style: normal;
 }
 
-.icon-sli-user,
+.icon-sli-action-redo,
+.icon-sli-action-undo,
+.icon-sli-anchor,
+.icon-sli-arrow-down,
+.icon-sli-arrow-down-circle,
+.icon-sli-arrow-left,
+.icon-sli-arrow-left-circle,
+.icon-sli-arrow-right,
+.icon-sli-arrow-right-circle,
+.icon-sli-arrow-up,
+.icon-sli-arrow-up-circle,
+.icon-sli-badge,
+.icon-sli-bag,
+.icon-sli-ban,
+.icon-sli-basket,
+.icon-sli-basket-loaded,
+.icon-sli-bell,
+.icon-sli-book-open,
+.icon-sli-briefcase,
+.icon-sli-bubble,
+.icon-sli-bubbles,
+.icon-sli-bulb,
+.icon-sli-calculator,
+.icon-sli-calendar,
+.icon-sli-call-end,
+.icon-sli-call-in,
+.icon-sli-call-out,
+.icon-sli-camera,
+.icon-sli-camrecorder,
+.icon-sli-chart,
+.icon-sli-check,
+.icon-sli-chemistry,
+.icon-sli-clock,
+.icon-sli-close,
+.icon-sli-cloud-download,
+.icon-sli-cloud-upload,
+.icon-sli-compass,
+.icon-sli-control-end,
+.icon-sli-control-forward,
+.icon-sli-control-pause,
+.icon-sli-control-play,
+.icon-sli-control-rewind,
+.icon-sli-control-start,
+.icon-sli-credit-card,
+.icon-sli-crop,
+.icon-sli-cup,
+.icon-sli-cursor,
+.icon-sli-cursor-move,
+.icon-sli-diamond,
+.icon-sli-direction,
+.icon-sli-directions,
+.icon-sli-disc,
+.icon-sli-dislike,
+.icon-sli-doc,
+.icon-sli-docs,
+.icon-sli-drawer,
+.icon-sli-drop,
+.icon-sli-earphones,
+.icon-sli-earphones-alt,
+.icon-sli-emotsmile,
+.icon-sli-energy,
+.icon-sli-envelope,
+.icon-sli-envelope-letter,
+.icon-sli-envelope-open,
+.icon-sli-equalizer,
+.icon-sli-eye,
+.icon-sli-eyeglass,
+.icon-sli-feed,
+.icon-sli-film,
+.icon-sli-fire,
+.icon-sli-flag,
+.icon-sli-folder,
+.icon-sli-folder-alt,
+.icon-sli-frame,
+.icon-sli-game-controller,
+.icon-sli-ghost,
+.icon-sli-globe,
+.icon-sli-globe-alt,
+.icon-sli-graduation,
+.icon-sli-graph,
+.icon-sli-grid,
+.icon-sli-handbag,
+.icon-sli-heart,
+.icon-sli-home,
+.icon-sli-hourglass,
+.icon-sli-info,
+.icon-sli-key,
+.icon-sli-layers,
+.icon-sli-like,
+.icon-sli-link,
+.icon-sli-list,
+.icon-sli-location-pin,
+.icon-sli-lock,
+.icon-sli-lock-open,
+.icon-sli-login,
+.icon-sli-logout,
+.icon-sli-loop,
+.icon-sli-magic-wand,
+.icon-sli-magnet,
+.icon-sli-magnifier,
+.icon-sli-magnifier-add,
+.icon-sli-magnifier-remove,
+.icon-sli-map,
+.icon-sli-menu,
+.icon-sli-microphone,
+.icon-sli-minus,
+.icon-sli-mouse,
+.icon-sli-music-tone,
+.icon-sli-music-tone-alt,
+.icon-sli-mustache,
+.icon-sli-note,
+.icon-sli-notebook,
+.icon-sli-options,
+.icon-sli-options-vertical,
+.icon-sli-organization,
+.icon-sli-paper-clip,
+.icon-sli-paper-plane,
+.icon-sli-paypal,
+.icon-sli-pencil,
 .icon-sli-people,
+.icon-sli-phone,
+.icon-sli-picture,
+.icon-sli-pie-chart,
+.icon-sli-pin,
+.icon-sli-plane,
+.icon-sli-playlist,
+.icon-sli-plus,
+.icon-sli-power,
+.icon-sli-present,
+.icon-sli-printer,
+.icon-sli-puzzle,
+.icon-sli-question,
+.icon-sli-refresh,
+.icon-sli-reload,
+.icon-sli-rocket,
+.icon-sli-screen-desktop,
+.icon-sli-screen-smartphone,
+.icon-sli-screen-tablet,
+.icon-sli-settings,
+.icon-sli-share,
+.icon-sli-share-alt,
+.icon-sli-shield,
+.icon-sli-shuffle,
+.icon-sli-size-actual,
+.icon-sli-size-fullscreen,
+.icon-sli-social-behance,
+.icon-sli-social-dribbble,
+.icon-sli-social-dropbox
+.icon-sli-social-facebook,
+.icon-sli-social-foursqare,
+.icon-sli-social-github,
+.icon-sli-social-google,
+.icon-sli-social-instagram,
+.icon-sli-social-linkedin,
+.icon-sli-social-pinterest,
+.icon-sli-social-reddit,
+.icon-sli-social-skype,
+.icon-sli-social-soundcloud,
+.icon-sli-social-spotify,
+.icon-sli-social-stumbleupon,
+.icon-sli-social-tumblr,
+.icon-sli-social-twitter,
+.icon-sli-social-youtube,
+.icon-sli-speech,
+.icon-sli-speedometer,
+.icon-sli-star,
+.icon-sli-support,
+.icon-sli-symbol-female,
+.icon-sli-symbol-male,
+.icon-sli-tag,
+.icon-sli-target,
+.icon-sli-trash,
+.icon-sli-trophy,
+.icon-sli-umbrella,
+.icon-sli-user,
 .icon-sli-user-female,
 .icon-sli-user-follow,
 .icon-sli-user-following,
 .icon-sli-user-unfollow,
-.icon-sli-login,
-.icon-sli-logout,
-.icon-sli-emotsmile,
-.icon-sli-phone,
-.icon-sli-call-end,
-.icon-sli-call-in,
-.icon-sli-call-out,
-.icon-sli-map,
-.icon-sli-location-pin,
-.icon-sli-direction,
-.icon-sli-directions,
-.icon-sli-compass,
-.icon-sli-layers,
-.icon-sli-menu,
-.icon-sli-list,
-.icon-sli-options-vertical,
-.icon-sli-options,
-.icon-sli-arrow-down,
-.icon-sli-arrow-left,
-.icon-sli-arrow-right,
-.icon-sli-arrow-up,
-.icon-sli-arrow-up-circle,
-.icon-sli-arrow-left-circle,
-.icon-sli-arrow-right-circle,
-.icon-sli-arrow-down-circle,
-.icon-sli-check,
-.icon-sli-clock,
-.icon-sli-plus,
-.icon-sli-minus,
-.icon-sli-close,
-.icon-sli-organization,
-.icon-sli-trophy,
-.icon-sli-screen-smartphone,
-.icon-sli-screen-desktop,
-.icon-sli-plane,
-.icon-sli-notebook,
-.icon-sli-mustache,
-.icon-sli-mouse,
-.icon-sli-magnet,
-.icon-sli-energy,
-.icon-sli-disc,
-.icon-sli-cursor,
-.icon-sli-cursor-move,
-.icon-sli-crop,
-.icon-sli-chemistry,
-.icon-sli-speedometer,
-.icon-sli-shield,
-.icon-sli-screen-tablet,
-.icon-sli-magic-wand,
-.icon-sli-hourglass,
-.icon-sli-graduation,
-.icon-sli-ghost,
-.icon-sli-game-controller,
-.icon-sli-fire,
-.icon-sli-eyeglass,
-.icon-sli-envelope-open,
-.icon-sli-envelope-letter,
-.icon-sli-bell,
-.icon-sli-badge,
-.icon-sli-anchor,
-.icon-sli-wallet,
 .icon-sli-vector,
-.icon-sli-speech,
-.icon-sli-puzzle,
-.icon-sli-printer,
-.icon-sli-present,
-.icon-sli-playlist,
-.icon-sli-pin,
-.icon-sli-picture,
-.icon-sli-handbag,
-.icon-sli-globe-alt,
-.icon-sli-globe,
-.icon-sli-folder-alt,
-.icon-sli-folder,
-.icon-sli-film,
-.icon-sli-feed,
-.icon-sli-drop,
-.icon-sli-drawer,
-.icon-sli-docs,
-.icon-sli-doc,
-.icon-sli-diamond,
-.icon-sli-cup,
-.icon-sli-calculator,
-.icon-sli-bubbles,
-.icon-sli-briefcase,
-.icon-sli-book-open,
-.icon-sli-basket-loaded,
-.icon-sli-basket,
-.icon-sli-bag,
-.icon-sli-action-undo,
-.icon-sli-action-redo,
-.icon-sli-wrench,
-.icon-sli-umbrella,
-.icon-sli-trash,
-.icon-sli-tag,
-.icon-sli-support,
-.icon-sli-frame,
-.icon-sli-size-fullscreen,
-.icon-sli-size-actual,
-.icon-sli-shuffle,
-.icon-sli-share-alt,
-.icon-sli-share,
-.icon-sli-rocket,
-.icon-sli-question,
-.icon-sli-pie-chart,
-.icon-sli-pencil,
-.icon-sli-note,
-.icon-sli-loop,
-.icon-sli-home,
-.icon-sli-grid,
-.icon-sli-graph,
-.icon-sli-microphone,
-.icon-sli-music-tone-alt,
-.icon-sli-music-tone,
-.icon-sli-earphones-alt,
-.icon-sli-earphones,
-.icon-sli-equalizer,
-.icon-sli-like,
-.icon-sli-dislike,
-.icon-sli-control-start,
-.icon-sli-control-rewind,
-.icon-sli-control-play,
-.icon-sli-control-pause,
-.icon-sli-control-forward,
-.icon-sli-control-end,
 .icon-sli-volume-1,
 .icon-sli-volume-2,
 .icon-sli-volume-off,
-.icon-sli-calendar,
-.icon-sli-bulb,
-.icon-sli-chart,
-.icon-sli-ban,
-.icon-sli-bubble,
-.icon-sli-camrecorder,
-.icon-sli-camera,
-.icon-sli-cloud-download,
-.icon-sli-cloud-upload,
-.icon-sli-envelope,
-.icon-sli-eye,
-.icon-sli-flag,
-.icon-sli-heart,
-.icon-sli-info,
-.icon-sli-key,
-.icon-sli-link,
-.icon-sli-lock,
-.icon-sli-lock-open,
-.icon-sli-magnifier,
-.icon-sli-magnifier-add,
-.icon-sli-magnifier-remove,
-.icon-sli-paper-clip,
-.icon-sli-paper-plane,
-.icon-sli-power,
-.icon-sli-refresh,
-.icon-sli-reload,
-.icon-sli-settings,
-.icon-sli-star,
-.icon-sli-symbol-female,
-.icon-sli-symbol-male,
-.icon-sli-target,
-.icon-sli-credit-card,
-.icon-sli-paypal,
-.icon-sli-social-tumblr,
-.icon-sli-social-twitter,
-.icon-sli-social-facebook,
-.icon-sli-social-instagram,
-.icon-sli-social-linkedin,
-.icon-sli-social-pinterest,
-.icon-sli-social-github,
-.icon-sli-social-google,
-.icon-sli-social-reddit,
-.icon-sli-social-skype,
-.icon-sli-social-dribbble,
-.icon-sli-social-behance,
-.icon-sli-social-foursqare,
-.icon-sli-social-soundcloud,
-.icon-sli-social-spotify,
-.icon-sli-social-stumbleupon,
-.icon-sli-social-youtube,
-.icon-sli-social-dropbox {
+.icon-sli-wallet,
+.icon-sli-wrench {
+
   font-family: 'sli';
   font-style: normal;  
   font-variant: normal;
